# flightrec

./: .gitignore  .skills-registry.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  dist-workspace.toml  release-plz.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config-help.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  pages.yml  release-plz.yml  release.yml
assets/: BRAND.md  demo.tape
docs/: architecture.md  config-reference.md
examples/agent-session-audit/: README.md  config.toml
examples/llm-narratives/: README.md  config.toml
examples/multi-root/: README.md  config.toml
examples/ollama-local/: README.md  config.toml
examples/watch-a-repo/: README.md  config.toml
landing/: index.html  style.css
skills/flightrec-build/: SKILL.md  run.sh
skills/meta/skillforge/: SKILL.md
skills/operational/agentscope-build/: SKILL.md  run.sh
skills/skillforge/: SKILL.md
src/: blobstore.rs  config.rs  diff.rs  lib.rs  main.rs  snapshot.rs  storage.rs  utils.rs
src/cli/: diff.rs  init.rs  mod.rs  replay.rs  report.rs  tui.rs  watch.rs
src/llm/: mod.rs  prompt.rs
src/llm/providers/: anthropic.rs  ollama.rs  openai.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
tests/: blob_store.rs  cli_init.rs  diff_basic.rs  dogfood.rs  llm_prompt.rs  storage_home_excluded.rs  unified_diff.rs
tests/fixtures/: expected_unified.diff  new_file.txt  old_file.txt
