[package]
name = "agentscope"
version = "0.1.0"
edition = "2021"
description = "Git-like observability for AI agents"
license = "MIT"

[lib]
name = "agentscope"
path = "src/lib.rs"

[[bin]]
name = "scope"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
globset = "0.4"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
similar = "2"
dirs = "5"
