[package]
name = "flightrec"
version = "0.2.0"
edition = "2021"
description = "Git-like filesystem observability for AI agents"
license = "Apache-2.0"
repository = "https://github.com/zakelfassi/flightrec"
homepage = "https://zakelfassi.github.io/flightrec"
readme = "README.md"
keywords = ["observability", "ai-agents", "snapshot", "diff", "filesystem"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
exclude = ["landing/", "skills/", "assets/", "tests/fixtures/", ".github/"]

[lib]
name = "agentscope"
path = "src/lib.rs"

[[bin]]
name = "flightrec"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
globset = "0.4"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
similar = "2"
dirs = "5"
